--- a/Main.html
+++ b/Main.html
@@ -5,15 +5,30 @@
     <meta charset="utf-8" />
     <title>Funny Bunny</title>
     <link type="text/css" href="CSS/Main.css" rel="stylesheet" />
-    <script type="text/javascript" src="Scripts/Main.js"></script>
-    <script type="text/javascript" src="Scripts/Graph.js"></script>
+    <link type="text/css" href="CSS/farbtastic.css" rel="stylesheet" />
+    <link type="text/css" href="CSS/bs/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-    <div  style="position:relative"> 
-        длина луча <input id="length" value="30"/>
-        количество точек на луч <input id="dotsCount"/>
-    </div>
+    <div id="MainContainer">
+        <div  id="Settings"> 
+            <div id="colorPanel">
+                <div id="colorpicker"></div>
+                <input type="text" name="color" id="color" value="#123456" />
+            </div>
+
+            <button id="showColorPicker" style="width: 10px; height:10px;" title="Цвета" ></button>
+        <button type="button" class="btn btn-primary" data-toggle="popover" title="Заголовок панели">Кнопка с popover</button>
+            длина луча <input id="length" value="30"/>
+            количество точек на луч <input id="dotsCount"/>
+            <p data-bind="text: lineUserLength"></p>
+        </div>
     
-    <canvas id="cnv"></canvas>
+        <canvas id="cnv"></canvas>
+    </div>
 </body>
+    <script type="text/javascript" src="Scripts/libs/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="Scripts/libs/bootstrap.min.js"></script>
+    <script type="text/javascript" src="Scripts/libs/farbtastic.js"></script>
+    <script type="text/javascript" src="Scripts/Main.js"></script>
+    <script type="text/javascript" src="Scripts/Graph.js"></script>
 </html>
