--- a/Main.html
+++ b/Main.html
@@ -28,6 +28,11 @@
             <span>шт</span>
         </div>
         <div class="settingsRow"> 
+            <label for="rotationAngle">Угол поворота:</label>
+            <input id="rotationAngle" data-bind="value: rotationAngle" />
+            <span>°</span>
+        </div>
+        <div class="settingsRow"> 
             <label for="linewidth">Толщина линий:</label>
             <input type="text" id="linewidth"  data-bind="value: linewidth" />
             <span>px</span>
