Make first horrible prototype

--- a/Main.html
+++ b/Main.html
@@ -48,6 +48,7 @@
         <div id="Settings">
             <button type="button" class="btn btn-primary" data-toggle="colorPopover" title="Выберите цвет фона">Фон</button>
             <button type="button" class="btn btn-primary" data-toggle="settingsPopover" title="Настройки элементов">Элементы</button>
+            <button type="button" class="btn btn-primary" data-toggle="circlePopover" title="Настройки круга">Круг</button>
             <button type="button" class="btn btn-primary" onclick="clearContext()">Очистить</button>
         </div>
 
@@ -60,4 +61,5 @@
 <script type="text/javascript" src="Scripts/libs/farbtastic.js"></script>
 <script type="text/javascript" src="Scripts/Main.js"></script>
 <script type="text/javascript" src="Scripts/Graph.js"></script>
+<script type="text/javascript" src="Scripts/Circle.js"></script>
 </html>
