--- a/Main.html
+++ b/Main.html
@@ -11,7 +11,7 @@
     <link type="text/css" href="CSS/bs/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="settingsPanel">
+    <div id="settingsPanel" style="display:none">
         <div class="settingsRow">
             <label for="length" >Длина луча:</label>
             <input id="length" data-bind="value: lineUserLength"/>
@@ -44,8 +44,8 @@
         <div id="colorCircle"></div>
     </div>
 
-    <div id="MainContainer" >
-        <div id="Settings">
+    <div id="MainContainer">
+        <div id="Settings" >
             <button type="button" class="btn btn-primary" data-toggle="colorPopover" title="Выберите цвет фона">Фон</button>
             <button type="button" class="btn btn-primary" data-toggle="settingsPopover" title="Настройки элементов">Элементы</button>
             <button type="button" class="btn btn-primary" data-toggle="circlePopover" title="Настройки круга">Круг</button>
@@ -60,6 +60,8 @@
 <script type="text/javascript" src="Scripts/libs/knockout-2.1.0.js"></script>
 <script type="text/javascript" src="Scripts/libs/farbtastic.js"></script>
 <script type="text/javascript" src="Scripts/Main.js"></script>
-<script type="text/javascript" src="Scripts/Graph.js"></script>
+    <script type="text/javascript" src="Scripts/Shape.js"></script>
+    <script type="text/javascript" src="Scripts/Stars.js"></script>
+<!--<script type="text/javascript" src="Scripts/Graph.js"></script>-->
 <script type="text/javascript" src="Scripts/Circle.js"></script>
 </html>
