--- a/Template.html
+++ b/Template.html
@@ -11,8 +11,8 @@
             <span>px</span>
         </div>
         <div class="settingsRow"> 
-            <label for="dotsCount" >Точек на луч:</label>
-            <input id="dotsCount" data-bind="value: dotsCount" />
+            <label for="linesCount" >Точек на луч:</label>
+            <input id="linesCount" data-bind="value: linesCount" />
             <span>шт</span>
         </div>
         <div class="settingsRow"> 
