--- a/Main.html
+++ b/Main.html
@@ -69,8 +69,8 @@
             <span>px</span>
         </div>
         <div class="settingsRow"> 
-            <label for="colorCirecle">Цвет линий:</label>
-            <input type="text" id="colorCirecle" name="color" style="width:40%" data-bind="value: lineColor"/>
+            <label for="colorCircle">Цвет линий:</label>
+            <input type="text" id="colorCirclePicker" name="color" style="width:40%" data-bind="value: lineColor"/>
         </div>
         <div id="colorCircleForCircle"></div>
     </div>
@@ -105,7 +105,9 @@
                         </div>
                         <div id="el4" class="panel-collapse collapse">
                             <div class="panel-body">
-                              <button type="button" class="btn btn-primary" onclick="clearContext()">Очистить</button>
+                                <button type="button" class="add-button" onclick="clearContext()"> <span class="glyphicon glyphicon-refresh"></span> Очистить</button>
+                                <br />
+                                <button type="button" class="add-button" onclick="saveImage()"> <span class="glyphicon glyphicon-floppy-disk"></span> Сохранить</button>
                             </div>
                         </div>
                     </div>
